# vladistas-client

./: CMakeLists.txt
include/: Application.hpp  Client.hpp  Config.hpp
src/: Application.cpp  Client.cpp  Config.cpp  Main.cpp
